fix(editor): Improve the contrast in the Chat Window in dark mode (no-changelog) (#9937)

--- a/packages/design-system/src/css/_tokens.scss
+++ b/packages/design-system/src/css/_tokens.scss
@@ -68,7 +68,6 @@
 	// LangChain
 	--color-lm-chat-messages-background: var(--color-background-base);
 	--color-lm-chat-bot-background: var(--prim-gray-0);
-	--color-lm-chat-bot-color: var(--color-text-dark);
 	--color-lm-chat-user-background: var(--prim-color-alt-a);
 	--color-lm-chat-user-color: var(--color-text-xlight);
 
